2024-03-02  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/25caf14be8d0284aceaa0de28753b3012e71b7bb )

2024-02-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/2a774a88f5532908e09b15602d1482be96470f7f ) and raygui ( https://github.com/raysan5/raygui/commit/bc67f42209cc32965c7d1c00028e3ed0c4158659 )

2024-02-18  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/c251e9309e066b9d2aa5ecbd15bcee45b9bef528 ) and raygui ( https://github.com/raysan5/raygui/commit/a9e5e900586cc264d5af5c88552b66bafe9970f5 )

2024-02-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/29ff658d9223068378269e4a705811f085fafdf4 ) and raygui ( https://github.com/raysan5/raygui/commit/58411f4cceb8ae82933f2001461db9940278fdeb )

2024-01-27  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/snake_case_rlgl : Added

2024-01-20  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Raylib.load_lib : Added 'method_naming' option to import APIs in snake case convention
	* examples/snake_case_api.rb : Added

2024-01-07  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated README
	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/be0ea89f830cce2fcb62acfedc69da4faca11b43 )

2024-01-05  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/eb6dcab308162037272edbad93ea1f10797c7352 ) and raygui ( https://github.com/raysan5/raygui/commit/e30a826909cefbce39bae4ceaee76da6b163e2b1 )

2023-12-30  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/raylib_with_tileson.rb : Added

2023-12-17  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/shaders_basic_pbr.rb : Added

2023-12-16  vaiorabbit  <http://twitter.com/vaiorabbit>
