@@ -374,9 +374,9 @@ module Raylib
   ICON_FOLDER = 217
   ICON_FILE = 218
   ICON_SAND_TIMER = 219
-  ICON_220 = 220
-  ICON_221 = 221
-  ICON_222 = 222
+  ICON_WARNING = 220
+  ICON_HELP_BOX = 221
+  ICON_INFO_BOX = 222
   ICON_223 = 223
   ICON_224 = 224
   ICON_225 = 225
