@@ -1,3 +1,7 @@
+2024-03-10  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/f072497551d9f03b5fbded289f8af021c103a8c0) and raygui ( https://github.com/raysan5/raygui/commit/623bc61f29839d451061252e1cc93edb013c2f8c )
+
 2024-03-02  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/25caf14be8d0284aceaa0de28753b3012e71b7bb )
